Fix for several more flickers in iOS.

--- a/styles/kendo.common.css
+++ b/styles/kendo.common.css
@@ -1486,6 +1486,8 @@ div.k-dropdown
 
 .k-list-container
 {
+    -webkit-touch-callout: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     padding: 2px;
     border: 1px solid transparent;
     -webkit-border-radius: 4px;
